@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 09:31:52 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 09:33:15 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -84,5 +84,11 @@
   <description>前ADOR娛樂CEO閔熙珍在與海譜的法律戰中取得進展海譜與前ADOR娛樂CEO閔熙珍的法律糾紛又有新進展一名內部吹哨人在首爾中央地方法院的一場聽證會上提供了新的證據指控BELIFTLAB旗下的新人Kpop女團ILLIT阿伊利特抄襲了NewJeans的概念據悉閔熙珍的訴訟中的一個關鍵問題是ILLIT抄襲NewJeans的新證據浮出水面閔熙珍聲稱她對這個問題的...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 09:31:52 +0800</pubDate>
+</item><item>
+  <title>Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？</title>
+  <link>https://www.famechos.me/news/Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？.html</link>
+  <description>BLACKPINK成員Jennie宣佈回歸新單曲Mantra將於10月11日發行韓國流行音樂女子組合BLACKPINK成員Jennie即將回歸樂壇她的新單曲Mantra將於10月11日發行這是她自2023年10月發行的個人數位單曲YouMe後時隔一年再次推出的個人作品Jennie在她的官方網站上宣佈了這個消息並提供了鏈接讓歌迷可以在Spotify和AppleMusic等主要串流平台上預存新曲同時她也發佈了一段Mantra的預覽片段展...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 09:33:15 +0800</pubDate>
 </item></channel>
 </rss>
