@@ -1,0 +1,266 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "Jennie\u5f37\u52e2\u56de\u6b78\uff01BLACKPINK\u6210\u54e1\u5ba3\u4f48\u65b0\u55ae\u66f2\u300aMantra\u300b10\u670811\u65e5\u767c\u884c\uff0c\u80fd\u5426\u518d\u767b\u544a\u793a\u724c\u699c\u55ae\uff1f", "description": "Jennie\u5f37\u52e2\u56de\u6b78\uff01BLACKPINK\u6210\u54e1\u5ba3\u4f48\u65b0\u55ae\u66f2\u300aMantra\u300b10\u670811\u65e5\u767c\u884c\uff0c\u80fd\u5426\u518d\u767b\u544a\u793a\u724c\u699c\u55ae\uff1f", "url": "https://www.famechos.me/news/Jennie\u5f37\u52e2\u56de\u6b78\uff01BLACKPINK\u6210\u54e1\u5ba3\u4f48\u65b0\u55ae\u66f2\u300aMantra\u300b10\u670811\u65e5\u767c\u884c\uff0c\u80fd\u5426\u518d\u767b\u544a\u793a\u724c\u699c\u55ae\uff1f.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T09:33:09.296402+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？.html"/>
+<meta name="description" content="BLACKPINK成員Jennie強勢回歸！新單曲《Mantra》將於10月11日發行，外界拭目以待能否再登告示牌榜單。">
+<meta name="keywords" content="Jennie, BLACKPINK, Mantra, 新單曲, 告示牌榜單">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？.html" />
+        <meta property="og:title" content="Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？" />
+        <meta property="og:description" content="Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？" />
+        <meta property="twitter:description" content="Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>韓國流行音樂女子組合BLACKPINK成員Jennie即將回歸樂壇。她的新單曲《Mantra》將於10月11日發行，這是她自2023年10月發行的個人數位單曲《You & Me》後，時隔一年再次推出的個人作品。</p>
+<p>Jennie在她的官方網站上宣佈了這個消息，並提供了鏈接讓歌迷可以在Spotify和Apple Music等主要串流平台上預存新曲。同時，她也發佈了一段《Mantra》的預覽片段，展現了耳熟能詳的旋律。</p>
+<p>Jennie曾與威肯和莉莉-蘿絲·戴普合作，推出了一首名為《One of the Girls》的歌曲，這首歌是HBO系列劇《偶像漩渦》的原聲帶。《One of the Girls》在Spotify上的串流次數超過了10億次，並在告示牌百大熱門榜上停留了20周，對榜單產生了顯著的影響。</p>
+<p>憑藉這首歌，Jennie成為了第一位獲得美國唱片業協會白金認證的韓國女歌手。白金認證代表著至少100萬張的銷售量。</p>
+<p>今年4月，Jennie的個人出道曲《Solo》的音樂視頻在YouTube上的觀看次數超過了10億次，使她成為了第一位達到這一成就的韓國女歌手。</p>
+<p>為了更好地在海外推廣她的項目，Jennie於9月與索尼音樂娛樂旗下的哥倫比亞唱片簽約。這家唱片公司代表著碧昂絲、愛黛兒和哈利·史泰爾斯等全球巨星。</p>
+<ol>
+<li>哥倫比亞唱片公司承諾將為Jennie的個人事業提供廣泛的支持。</li>
+<li>Jennie的新單曲《Mantra》將於10月11日發行。</li>
+</ol>
+<p>隨著《Mantra》的發行臨近，歌迷們正熱切地期待著Jennie是否能夠第二次以個人身份登上告示牌百大熱門榜。雖然她曾多次與BLACKPINK一起登上榜單，但她的個人出道曲《One of the Girls》才是她第一次以個人身份登上榜單。根據您的要求，我處理了文章。以下是處理好的內容：</p>
+<p>歌手的早期單曲《You & Me》曾經登上告示牌榜外單曲榜的第二位，但未能登上主榜。</p>
+<p>請注意，我已經按照您的要求刪除了不必要的內容和連接詞，並改寫了句式以符合您的身份設定。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/bB3-CUMERIU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫.html">K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」.html">K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/新裤子Hanni挺身而出！將獨自出席國會審查揭露遭欺凌經歷.html">新裤子Hanni挺身而出！將獨自出席國會審查揭露遭欺凌經歷</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
