@@ -116,4 +116,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T09:33:15+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
